fix: fixed layout & z-index 적용

--- a/cashbook/public/stylesheets/days.css
+++ b/cashbook/public/stylesheets/days.css
@@ -88,7 +88,6 @@
 }
 .day_info_sum {
     position: static;
-    width: 71px;
     height: 22px;
     left: 34px;
     top: 0px;
@@ -195,7 +194,7 @@
 }
 .payment_text {
     position: static;
-    width: 280px;
+    width: 250px;
     height: 22px;
     left: 430px;
     top: 24px;
@@ -217,6 +216,9 @@
     position: static;
     width: 100px;
     height: 22px;
+
+    display: flex;
+    justify-content: flex-end;
 
     font-family: Noto Sans KR;
     font-style: normal;
